[gd_scene load_steps=9 format=3 uid="uid://4v1scc4s3527"]

[ext_resource type="Script" path="res://dickiebird/scenes/dickiebird.gd" id="1_pqfh5"]
[ext_resource type="PackedScene" uid="uid://c6ikve3c6ibpa" path="res://dickiebird/scenes/background.tscn" id="1_xe64a"]
[ext_resource type="Resource" uid="uid://b2lkanv6csjrd" path="res://dickiebird/resources/pipes.tres" id="2_vy1sx"]
[ext_resource type="PackedScene" uid="uid://kg6n4g4hmyla" path="res://dickiebird/scenes/ui/game_over_screen.tscn" id="4_v1urx"]
[ext_resource type="PackedScene" uid="uid://8jy45divx1yx" path="res://dickiebird/scenes/ui/score.tscn" id="5_gcefc"]
[ext_resource type="PackedScene" uid="uid://dpivvlwv65rna" path="res://dickiebird/scenes/dickie_bird.tscn" id="6_g5h3y"]
[ext_resource type="AudioStream" uid="uid://cevki0b33ml21" path="res://dickiebird/assets/sounds/Dickie-Adventure-Traumland-Strokes.ogg" id="7_i0e2v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ckwdp"]
size = Vector2(400, 13)

[node name="DickieBird" type="Node2D"]
script = ExtResource("1_pqfh5")
pipes_settings = ExtResource("2_vy1sx")

[node name="Background" parent="." instance=ExtResource("1_xe64a")]
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)

[node name="DickieBird" parent="." instance=ExtResource("6_g5h3y")]
position = Vector2(131, 56)
scale = Vector2(3, 3)

[node name="Pipes" type="Node2D" parent="."]
scale = Vector2(3, 3)

[node name="SpawnTimer" type="Timer" parent="Pipes"]
wait_time = 0.8

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" parent="UI" instance=ExtResource("5_gcefc")]

[node name="GameOverScreen" parent="UI" instance=ExtResource("4_v1urx")]
visible = false

[node name="LevelTwoTimer" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="Abyss" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abyss"]
position = Vector2(210, 767)
shape = SubResource("RectangleShape2D_ckwdp")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_i0e2v")

[connection signal="game_over" from="DickieBird" to="." method="_on_dickie_bird_game_over" flags=6]
[connection signal="timeout" from="Pipes/SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="restart" from="UI/GameOverScreen" to="." method="_on_game_over_screen_restart"]
[connection signal="timeout" from="LevelTwoTimer" to="." method="_on_level_two_timer_timeout"]
[connection signal="body_entered" from="Abyss" to="." method="_on_abyss_body_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
